# GEMOS

./: .env.cursor  .env.example  .env.linear  .env.optimized  .env.template  .env.template.aws  .gitignore  .goutputstream-IOPHB3  ACCELERATED_TIMELINE.md  AGENT_COMMUNICATION_PROTOCOL.md  AI_TEAM_DELEGATION.md  AI_TEAM_MEMBERS_TASKS.md  ALL_AI_AGENTS_COORDINATION.json  ALL_AI_AGENTS_COORDINATION.py  AUTONOMOUS_CONFIG.json  CODEGEEX_INTEGRATION.py  CODEGEEX_INTEGRATION.py.backup  COMPLETE_AI_VERIFICATION.md  CONTRIBUTING.md  COPILOT_CLI_USAGE.md  CURSOR_LINEAR_SETUP.md  ENHANCEMENT_PLAN.md  FILE_ANALYSIS.md  FILE_SYNC_MANIFEST.md  GEMOS_200_UPGRADE_REPORT.md  HELP.py  HELP.py.backup  INTEGRATE_ALL_AI_TOOLS.py  INTEGRATE_ALL_AI_TOOLS.py.backup  LICENSE  LINUX_DISTRO_RULES.md  MANIFEST.in  MISSION_ACCOMPLISHED.md  MISSION_CONTROL.py  NEXT_STEPS.md  PERPETUAL_WORK_PROTOCOL.md  PROJECT_MANAGEMENT.md  PROJECT_RESET_ANALYSIS.md  PROJECT_STATUS.md  README.md  (+183 more)
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  dependabot.yml  dependency-review-config.yml
backup/: README.md
backup_before_encoding_fix/: AdaptiveLayerLoss.py  BatchHardTripletLoss.py  BinaryClassificationEvaluator.py  BinaryCrossEntropyLoss.py  BoW.py  CLIPModel.py  CNN.py  CSRLoss.py  CachedGISTEmbedLoss.py  CachedMultipleNegativesRankingLoss.py  CachedMultipleNegativesRankingLoss_1.py  CachedMultipleNegativesSymmetricRankingLoss.py  CoSENTLoss.py  ContrastiveLoss.py  ContrastiveTensionLoss.py  CosineSimilarityLoss.py  CrossEncoder.py  CrossEntropyLoss.py  DenoisingAutoEncoderDataset.py  LSTM.py  (+225 more)
(+311 files in other folders)
