[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gemos"
version = "1.0.0"
description = "GEM OS - AI-Coordinated Voice Assistant"
authors = [{name = "xelooou5"}]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "pyttsx3>=2.90",
    "speechrecognition>=3.10.0",
    "pyaudio>=0.2.11",
    "faster-whisper>=0.10.0",
    "boto3>=1.34.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.3",
    "requests>=2.31.0",
    "sounddevice>=0.4.6",
    "google-cloud-speech>=2.21.0",
    "google-generativeai>=0.3.0",
    "anthropic>=0.7.0",
]

[project.urls]
Homepage = "https://github.com/xelooou5/GEMOS"
Repository = "https://github.com/xelooou5/GEMOS"
